css/styles.css
@import "reset.css";
@import "variables.css";

/* components */
@import  "components/section.css";
@import  "components/alt-section.css";

/* screens */
@import "screens/header.css";

html,body {
    height: 1000vh;
}

/* to prevent intrusion into the header */
/* please edit here when you add new components or screens */
*:not(header),
*:not(section) {
    z-index: -1;
}

header {
    z-index: 2;
}

section {
    z-index: 1;
}

@keyframes hideSplashScreen {
    from {
        opacity: 1;
    }
    to {
        opacity: 0;
        visibility: hidden;
    }
}

#splash-screen {
    z-index: 3;
    background-color: #fcdf7f;
    position: absolute;
    height: 100vh;
    width: 100vw;
    top: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 128px;
    animation: hideSplashScreen 0.4s ease-in-out forwards;
    animation-delay: 1s;
}

